2002-10-11 Tim Miller <tim_miller@users.sourceforge.net> (1.0-b9)
	
	* NOTE: GR CAN BE RUN IN GR PROTO 2 MODE BY CHANGING THE 
	  protocolVersion IN THE PROPERTIES FILE.
	  THIS WILL ALL PAN OUT WITH THE NEXT CHECKIN -- GR WILL DYNAMICALLY 
	  BIND TO THE NEWEST SERVER PROTOCOL. FOR NOW, CAVEAT EMPTOR.
	* Made GalleryComm and interface, moved GalleryComm implementation to
	  GalleryComm1.java.
	* Created GalleryComm2.java, based on GalleryComm1.java to implement
	  version 2 of the GR protocol.
	* Moved status interaction between GalleryComm classes and MainFrame
	  to an interface (StatusUpdate).
	* Created a Swing-style adapter for StatusUpdate (StatusUpdateAdapter).
	* Changed several classes to use the URL type instead of passing URLs
	  around as Strings.
	* Added ability in PictureInspector to edit picture comments (since this is
	  supported in version 2 of the protocol).
	* Added permission support to the Album model object.
	* Added support for Albums actually being in a tree (this is supported
	  by proto version 2.
	* Updated Gallery Remote proto version 2 document to describe
	  user permission attributes (read, write, change, delete) on 
	  Album objects.
	* paour: Added support for resizing images based on server autoResize
	  size (only with protocol 2)
	* paour: now logging out when username or password field is edited
	* paour: if setCaptionWithFilename property is enabled, captions
	  will use the image filename by default.

2002-10-03  Pierre-Luc Paour <gallery@paour.com> (1.0-b8)
	
	* Fixed another Java 1.3 bug where the Album combo box was not working

2002-10-01  Pierre-Luc Paour <gallery@paour.com> (1.0-b7)
	
	* Added image resize before upload (this requires ImageMagick and can be enabled by 
		changing the variables resizeTo and resizeBeforeUpload in
		GalleryRemote.properties.
	* Added automatic update notification for betas, too. Beta builds will come with
		this enabled. Release builds will only check for new releases, unless