@@ -1,3 +1,7 @@
+2002-10-19  Pierre-Luc Paour <gallery@paour.com> (1.0-b10)
+	
+	* Fixed adding a Gallery (broken in b9).
+
 2002-10-11 Tim Miller <tim_miller@users.sourceforge.net> (1.0-b9)
 	
 	* NOTE: GR CAN BE RUN IN GR PROTO 2 MODE BY CHANGING THE 
